update for homepage

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "se_project_spots",
   "version": "0.1.0",
   "description": "- Intro\r - Figma\r - Images",
-  "homepage": "https://github.com/lizmary0209/se_project_spots#readme",
+  "homepage": "https://lizmary0209.github.io/se_project_spots/",
   "bugs": {
     "url": "https://github.com/lizmary0209/se_project_spots/issues"
   },
