--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   },
   "main": "index.js",
   "scripts": {
-    "build": "webpack --config ./src/webpack.config.cjs --mode production",
-    "dev": "webpack serve --config ./src/webpack.config.cjs --mode development",
+    "build": "webpack --config ./webpack.config.cjs --mode production",
+    "dev": "webpack serve --config ./webpack.config.cjs --mode development",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
